--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 APP_ENVIRONMENT=local
 PORT=5001
+VITE_API_URL=http://localhost:5001/api
+
+# Online Connection
 # CONNECTION_STRING=mongodb+srv://admin:admin123@cluster0.lumwg0v.mongodb.net/contact_app?appName=Cluster0
+
+# Offline (Locally) Connection
 CONNECTION_STRING=mongodb://localhost:27017/contact_app
