--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ VITE_API_URL=http://localhost:5001/api
 # CONNECTION_STRING=mongodb+srv://admin:admin123@cluster0.lumwg0v.mongodb.net/contact_app?appName=Cluster0
 
 # Offline (Locally) Connection
-CONNECTION_STRING=mongodb://localhost:27017/contact_app
+CONNECTION_STRING=mongodb://localhost:27017/todo_app
