--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ dist-ssr
 *.local
 
 old
-mongodb-data/*
-mongodb-socket/*
+mongodb-data
+mongodb-socket
 
 # Editor directories and files
 .vscode/*
