--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#521C13",
-        "titleBar.activeBackground": "#73271B",
-        "titleBar.activeForeground": "#FDF9F8"
+        "activityBar.background": "#1E321D",
+        "titleBar.activeBackground": "#2A4628",
+        "titleBar.activeForeground": "#F7FBF7"
     }
 }
