--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.0",
+    "jsonwebtoken": "^9.0.3",
     "perfect-scrollbar": "^1.5.6",
     "pinia": "^3.0.4",
     "remixicon": "^4.7.0",
@@ -48,8 +50,8 @@
     "@tsconfig/node22": "^22.0.5",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
-    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.19.1",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
