--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "module": "ESNext",
-    "moduleResolution": "Bundler"
+    "moduleResolution": "Bundler",
+    "typeRoots": [
+      "../../node_modules/@types",
+      "../shared/types"
+    ]
   }
 }
