--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "moduleResolution": "NodeNext",
     "strict": true,
     "jsx": "preserve",
+    // "baseUrl": ".",
+    // "ignoreDeprecations": "6.0",
     "paths": {
       "@shared/*": [
         "./src/shared/*"
