--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ JWT_SECRET=your-super-secret-jwt-key
 # Online Connection
 # CONNECTION_STRING=mongodb+srv://admin:admin123@cluster0.lumwg0v.mongodb.net/contact_app?appName=Cluster0
 # Offline (Locally) Connection
-CONNECTION_STRING=mongodb://localhost:27016/ecommerce
+CONNECTION_STRING=mongodb://localhost:27019/loginSystem
 
 
 # Firebase
